# ruffee

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.js
assets/: main.css
migrations/: 20240624024826_1_setup.sql  20240624033736_2_coffee.sql  20240628071523_1_setup.up.sql  20240628071533_2_coffee.down.sql  20240628071533_2_coffee.up.sql
src/: error.rs  lib.rs  main.rs
src/api/: coffee.rs  mod.rs  router.rs
src/api/coffee/: mod.rs  router.rs
src/app/: coffee.rs  components.rs  mod.rs  router.rs
styles/: tailwind.css
templates/: add_coffee.html  another-page.html  base.html  coffee.html  coffees.html  hello.html  shell.html  todo-list.html
templates/components/: title_input.html
