[package]
name = "ruffee"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
uuid = { version = "1.9.1", features = ["serde"] }
